SERVER-22058 Fix warnings in non-MMAP V1 implementation of writingPtr